# equip-control

./: .gitattributes  ARCHITECTURE.md  DIAGRAMS.md  README.md  SDD.md  SRS.md  pin-mapping.md
chamber-ec/: ec.py
chamber-ec/include/: Protocol.h
chamber-ec/src/: AlarmManager.cpp  DeviceComm.cpp  main.cpp
chamber-fw/: .cproject  heater-test.ioc  heater-test.launch
chamber-fw/Core/Inc/: dht22.h  main.h  sht31.h
chamber-fw/Core/Src/: main.c  (+1 more)
chamber-fw/Debug/: heater-test.elf  heater-test.list  heater-test.map  makefile  objects.list
docs/: ARCHITECTURE.md  Logic-analyzer.md  SRS-on-site.md  SRS.md  TEST_PLAN.md  TROUBLESHOOTING_LED.md  electronic-component.md  pin-mapping.md  portfolio-ppt.md
docs/hw/: AIM-001.md  EFS-001.md  HDS-001.md  IO-001.md  SCN-001.md  TPV-001.md  TRG-001.md
docs/troubleshooting/: troubleshooting-fan.md  troubleshooting-heater-test.md  troubleshooting-ina219-spark-damage.md  troubleshooting-relay-fan.md
equip-control-ec/: CMakeLists.txt
equip-control-ec/include/: AlarmManager.h  DeviceComm.h  HsmsServer.h  Protocol.h  StateMachine.h
equip-control-ec/src/: AlarmManager.cpp  DeviceComm.cpp  HsmsServer.cpp  StateMachine.cpp  main.cpp
equip-control-fw/: .cproject  .gitignore  .mxproject  .project  equipment-monitor.ioc
equip-control-host/: config.py  main.py
equip-control-host/handlers/: MessageHandler.py
equip-control-host/hsms/: HsmsClient.py  SecsCodec.py
equip-control-host/ui/: Console.py
heater-test/: .project  heater-test.ioc
heater-test/Debug/: heater-test.elf  heater-test.list  heater-test.map  objects.list
(+41 files in other folders)
